# buffered_io

./: Makefile  README.md  bash_env.sh  buffered_io.opam  dune-project
src/: buffered_io.ml  dune  file_with_append_and_pread.ml  file_with_buffering.ml  from_extunix.ml  misc.ml  note_on_supporting_append.mld  pread_pwrite.ml  xxx_buffered_io.ml
