(lang dune 2.0)
(name buffered_io)

;; for opam
(authors "Tom Ridge <tom.j.ridge@googlemail.com>")
(maintainers "Tom Ridge <tom.j.ridge@googlemail.com>")
(source (github tomjridge/FIXME))
(homepage https://github.com/tomjridge/FIXME)
(documentation https://tomjridge.github.io/FIXME/ocamldoc/index.html)
(generate_opam_files true)


(package 
 (name buffered_io)
 (synopsis "FIXME")
 (depends ocamlfind dune)
)


